--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Mern Cafe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.7c2f1cfcf29bce6979e1.js?b0ede53afbb3fa5ca0fc"></script><script defer src="js/dist/App.7f352f18e4dd9335bf94.js?b0ede53afbb3fa5ca0fc"></script><script defer src="js/dist/main.59bae51ef0effcb507ff.js?b0ede53afbb3fa5ca0fc"></script></head>
+<script defer src="/js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.7839dd4d6f230031c586.js?8fed3db8642d3a7eb2e2"></script><script defer src="/js/dist/App.192a32b60a7c90cf7724.js?8fed3db8642d3a7eb2e2"></script><script defer src="/js/dist/main.59bae51ef0effcb507ff.js?8fed3db8642d3a7eb2e2"></script></head>
 
 <body>
   <div id="app"></div>
