--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
   <meta charset="utf-8">
   <title>Mern Cafe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="/js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.7839dd4d6f230031c586.js?8fed3db8642d3a7eb2e2"></script><script defer src="/js/dist/App.192a32b60a7c90cf7724.js?8fed3db8642d3a7eb2e2"></script><script defer src="/js/dist/main.59bae51ef0effcb507ff.js?8fed3db8642d3a7eb2e2"></script></head>
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    />
+<script defer src="/js/dist/vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_sour-354ecd.bcd70b50f4898a2c327c.js?45f88f9cc18c6a1a81ab"></script><script defer src="/js/dist/App.abccba14985eb42f7b8c.js?45f88f9cc18c6a1a81ab"></script><script defer src="/js/dist/main.59bae51ef0effcb507ff.js?45f88f9cc18c6a1a81ab"></script></head>
 
 <body>
   <div id="app"></div>
